[gd_scene load_steps=2 format=3 uid="uid://bx7n4wstdwswg"]

[ext_resource type="Script" path="res://Block/tetris_block.gd" id="1_vrmr6"]

[node name="TetrisBlock" type="Node2D"]
script = ExtResource("1_vrmr6")

[node name="down_timer" type="Timer" parent="."]
autostart = true

[node name="down_cooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BlockTiles" type="Node2D" parent="."]

[connection signal="timeout" from="down_timer" to="." method="_on_down_timer_timeout"]
